my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EDISCONST/T_EDISCONST-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EDISCONST_STRUCT_H
#define T_EDISCONST_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EDISCONST(void);


#endif /* not T_EDISCONST_STRUCT_H */
